--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 .body {
-    background-image: url('media/Background2025.png');
+    background-image: url('Media/Background2025.png');
     background-repeat: no-repeat;
     background-size: cover;
 }
+
